applications/headscale-ui/40-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: headscale-ui-ingress
  namespace: headscale
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
    - host: vpn.home.dohrm.fr
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: headscale-ui
                port:
                  number: 8080
